# bigquery-component

./: .gitignore  Cargo.toml  README.md  component.wasm  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: google_jwt.rs  lib.rs
