[package]
name = "example-rust-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.41"
jwt-simple = "0.12.12"
pem = "3.0.5"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
url = "2.5.4"
wit-bindgen = "0.41.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
