[package]
name = "bigquery-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
jwt-simple = "0.12.12"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
wit-bindgen = "0.43.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
